[package]
name = "hmac-sha"
version = "0.2.1"
edition = "2018"
authors = ["Philip Woolford <woolford.philip@gmail.com>", "Leonardo Razovic <lrazovic@gmail.com>"]
keywords = ["crypto", "sha", "hmac", "digest"]
description = "Minimal implementation of HMAC-SHA-{1,2,3} in Rust."
license = "MIT OR Apache-2.0"
repository = "https://github.com/lrazovic/rust-hmac-sha"
include = ["**/*.rs", "LICENSE"]
readme = "README.md"
categories = ["cryptography", "no-std"]

[lib]
name = "hmacsha"
path = "src/lib.rs"

[dependencies]
sha-1 = "0.9"
sha2 = "0.9"
sha3 = "0.9"

[dev-dependencies]
hex = "0.4"
